feat: added the create and list products route to swag
